test-results-phase3.log

> fleet-management-v2@0.1.0 test
> playwright test

SyntaxError: /Users/skycruzer/Desktop/fleet-management-v2/e2e/pilots.spec.ts: Unexpected token, expected "," (75:4)

  73 |
  74 |     // Look for pilot count indicator
> 75 |     const countText = page.getByText(/\d+ pilots?/i)
     |     ^
  76 |     if (await countText.isVisible()) {
  77 |       const text = await countText.textContent()
  78 |       expect(text).toMatch(/\d+/)

   at pilots.spec.ts:75

  73 |
  74 |     // Look for pilot count indicator
> 75 |     const countText = page.getByText(/\d+ pilots?/i)
     |    ^
  76 |     if (await countText.isVisible()) {
  77 |       const text = await countText.textContent()
  78 |       expect(text).toMatch(/\d+/)


To open last HTML report run:
[36m[39m
[36m  npx playwright show-report[39m
[36m[39m
